--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=student-management
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdatabase?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
